working on pweb ui module

--- a/pweb_ui/template-assets/templates/layout/base.html
+++ b/pweb_ui/template-assets/templates/layout/base.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link href="{{ url_for('pweb-ui.static', filename='css/lib/bootstrap.min.css') }}" rel="stylesheet">
-    <script src="{{ url_for('pweb-ui.static', filename='js/lib/bootstrap.bundle.min.js') }}"></script>
-
     <title>{% block title %}{{- pweb_app_name }}{% endblock %}</title>
+    <link rel="stylesheet" href="{{ url_for('pweb-ui.static', filename='css/lib/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('pweb-ui.static', filename='js/lib/confirm/jquery-confirm.min.css') }}">
+    {% block base_head %}{% endblock %}
+    <script src="{{ url_for('pweb-ui.static', filename='js/pweb/pweb.js') }}"></script>
+    {{- util.set_base_js()|safe }}
 </head>
 <body>
-    <div class="container p-3">
-        {% block content %}{% endblock %}
-    </div>
-    <script src="{{ url_for('pweb-ui.static', filename='js/lib/bootstrap-form-validator.js') }}"></script>
+
+{% block content %}{% endblock %}
+
+<script src="{{ url_for('pweb-ui.static', filename='js/lib/jquery-3.7.1.min.js') }}"></script>
+<script src="{{ url_for('pweb-ui.static', filename='js/lib/bootstrap.bundle.min.js') }}"></script>
+<script src="{{ url_for('pweb-ui.static', filename='js/lib/bootstrap-form-validator.js') }}"></script>
+<script src="{{ url_for('pweb-ui.static', filename='js/lib/fontawesome-all.min.js') }}"></script>
+
+<script src="{{ url_for('pweb-ui.static', filename='js/lib/confirm/jquery-confirm.min.js') }}"></script>
+
+<script src="{{ url_for('pweb-ui.static', filename='js/pweb/pweb.message.box.js') }}"></script>
+<script src="{{ url_for('pweb-ui.static', filename='js/pweb/pweb.init.js') }}"></script>
+<script>
+    PWeb.messageBox.parseAndShowMessage({{- util.pweb_flashed_messages|safe }})
+</script>
+
 </body>
 </html>
