--- a/pweb_ui/template-assets/templates/layout/auth-layout.html
+++ b/pweb_ui/template-assets/templates/layout/auth-layout.html
@@ -4,7 +4,7 @@
      <link rel="stylesheet" href="{{ url_for('pweb-ui.static', filename='css/footer.css') }}">
 {% endblock %}
 
-{% block content %}
+{% block pweb_ui_content %}
 
     <main class="d-flex flex-column align-items-center justify-content-center min-vh-auth">
         <div class="d-flex w-75 justify-content-center md-flex-column">
