--- a/pweb_ui/template-assets/templates/layout/pui-auth-layout.html
+++ b/pweb_ui/template-assets/templates/layout/pui-auth-layout.html
@@ -1,7 +1,7 @@
-{% extends "layout/base.html" %}
+{% extends "layout/pui-base.html" %}
 {% block base_head %}
-     <link rel="stylesheet" href="{{ url_for('pweb-ui.static', filename='css/auth-base.css') }}">
-     <link rel="stylesheet" href="{{ url_for('pweb-ui.static', filename='css/footer.css') }}">
+     <link rel="stylesheet" href="{{ url_for('pweb-ui.static', filename='css/pui-auth-base.css') }}">
+     <link rel="stylesheet" href="{{ url_for('pweb-ui.static', filename='css/pui-footer.css') }}">
 {% endblock %}
 
 {% block pweb_ui_content %}
