Working on auth and ui

--- a/pweb_ui/template-assets/templates/layout/pui-auth-layout.html
+++ b/pweb_ui/template-assets/templates/layout/pui-auth-layout.html
@@ -1,5 +1,5 @@
 {% extends "layout/pui-base.html" %}
-{% block base_head %}
+{% block pweb_ui_base_head %}
      <link rel="stylesheet" href="{{ url_for('pweb-ui.static', filename='css/pui-auth-base.css') }}">
      <link rel="stylesheet" href="{{ url_for('pweb-ui.static', filename='css/pui-footer.css') }}">
 {% endblock %}
