--- a/pweb_ui/template-assets/templates/auth/reset-password.html
+++ b/pweb_ui/template-assets/templates/auth/reset-password.html
@@ -1,7 +1,8 @@
 {% extends "layout/pui-auth-layout.html" %}
 
 {% block auth_layout %}
-    <form class="needs-validation row g-3 " novalidate method="post" action="{{ url_for("pweb-ui.login") }}">
+    <form class="needs-validation row g-3 " novalidate method="post" action="{{ url_for("pweb-ui.reset_password", token=token) }}">
+        {% form_input field=form.token %}
         {% form_input field=form.newPassword, wrapper="mb-3 col-md-12" %}
         {% form_input field=form.confirmPassword, wrapper="mb-3 col-md-12" %}
         <div class="d-grid">
