--- a/pweb_ui/template-assets/templates/auth/reset-password.html
+++ b/pweb_ui/template-assets/templates/auth/reset-password.html
@@ -1,7 +1,7 @@
 {% extends "layout/pui-auth-layout.html" %}
 
 {% block auth_layout %}
-    <form class="needs-validation row g-3 " novalidate method="post" action="{{ url_for("pweb-ui.reset_password", token=token) }}">
+    <form class="needs-validation row g-3 " novalidate method="post" action="{{ url_for("auth_controller.reset_password", token=token) }}">
         {% form_input field=form.token %}
         {% form_input field=form.newPassword, wrapper="mb-3 col-md-12" %}
         {% form_input field=form.confirmPassword, wrapper="mb-3 col-md-12" %}
@@ -9,7 +9,7 @@
             <button type="submit" class="btn btn-primary">Set Password</button>
             <hr class="mt-3 mb-1">
             <div class="text-center">
-                <a href="{{ url_for("pweb-ui.login") }}" class="btn btn-success">
+                <a href="{{ url_for("auth_controller.login") }}" class="btn btn-success">
                     Login
                 </a>
             </div>
