--- a/pweb_ui/template-assets/templates/layout/pui-admin-layout.html
+++ b/pweb_ui/template-assets/templates/layout/pui-admin-layout.html
@@ -65,7 +65,7 @@
                                 <div class="dropdown-divider"></div>
                             </li>
                             <li>
-                                <a class="dropdown-item drop-link" href="#">
+                                <a class="dropdown-item drop-link" href="{{ url_for("auth_controller.logout") }}">
                                     <span class="p-menu-icon">
                                         <i class="fa-solid fa-right-from-bracket"></i>
                                     </span>
