--- a/pweb_ui/template-assets/templates/auth/forgot-password.html
+++ b/pweb_ui/template-assets/templates/auth/forgot-password.html
@@ -1,7 +1,7 @@
 {% extends "layout/pui-auth-layout.html" %}
 
 {% block auth_layout %}
-    <form class="needs-validation row g-3 " novalidate method="post" action="{{ url_for("pweb-ui.forgot_password") }}">
+    <form class="needs-validation row g-3 " novalidate method="post" action="{{ url_for("auth_controller.forgot_password") }}">
         {% if auth_base == "USERNAME" %}
             {% form_input field=form.username, wrapper="mb-3 col-md-12" %}
         {% else %}
@@ -11,7 +11,7 @@
             <button type="submit" class="btn btn-primary"> Reset Password </button>
             <hr class="mt-3 mb-1">
             <div class="text-center">
-                <a href="{{ url_for("pweb-ui.login") }}" class="btn btn-success">
+                <a href="{{ url_for("auth_controller.login") }}" class="btn btn-success">
                     Login
                 </a>
             </div>
