--- a/pweb_ui/template-assets/templates/auth/forgot-response.html
+++ b/pweb_ui/template-assets/templates/auth/forgot-response.html
@@ -4,6 +4,6 @@
     <div class="text-center mb-4">
         <h2 class="mt-2 fw-bolder text-success">Reset Success</h2>
         <p>Please check your email/mobile to get link or code.</p>
-        <a href="{{ url_for("pweb-ui.login") }}" class="btn btn-primary">Log In</a>
+        <a href="{{ url_for("auth_controller.login") }}" class="btn btn-primary">Log In</a>
     </div>
 {% endblock %}
