Working on Registration Feature

--- a/pweb_ui/template-assets/templates/auth/registration.html
+++ b/pweb_ui/template-assets/templates/auth/registration.html
@@ -19,7 +19,7 @@
         {% if ENABLE_REGISTRATION %}
             <hr class="mt-3 mb-1">
             <div class="text-center">
-                <a href="{{ url_for("auth_controller.registration") }}" class="btn btn-success">
+                <a href="#" class="btn btn-success">
                     Register
                 </a>
             </div>
