--- a/pweb_ui/template-assets/templates/auth/registration-response.html
+++ b/pweb_ui/template-assets/templates/auth/registration-response.html
@@ -2,8 +2,8 @@
 
 {% block auth_layout %}
     <div class="text-center mb-4">
-        <h2 class="mt-2 fw-bolder text-success">Reset Success</h2>
-        <p>Please check your email/mobile to get link or code.</p>
+        <h2 class="mt-2 fw-bolder text-success">Registration Success</h2>
+        <p>Welcome to <span class="fw-bolder">{{ pweb_app_name }}</span></p>
         <a href="{{ url_for("auth_controller.login") }}" class="btn btn-primary">Log In</a>
     </div>
 {% endblock %}
