--- a/pweb_ui/template-assets/templates/snippet/table-top-action.html
+++ b/pweb_ui/template-assets/templates/snippet/table-top-action.html
@@ -1,5 +1,5 @@
 <div class="card mb-3">
-    <div class="bg-holder d-none d-lg-block bg-card pf-bg-left" style=" background-image: url('{{ url_for('example.static', filename='img/header-bg.png') }}');">
+    <div class="bg-holder d-none d-lg-block bg-card pf-bg-left" style=" background-image: url('{{ url_for('pweb-ui.static', filename='img/header-bg.png') }}');">
     </div>
     <div class="card-body pf-table-header position-relative">
         <div class="d-md-flex justify-content-between d-sm-block align-items-center">
