--- a/pweb_ui/template-assets/templates/layout/pui-admin-layout.html
+++ b/pweb_ui/template-assets/templates/layout/pui-admin-layout.html
@@ -111,4 +111,8 @@
     </main>
 {% endblock %}
 
+{% block pweb_ui_base_bottom %}
+    {% block pweb_ui_admin_bottom %}{% endblock %}
+{% endblock %}
+
 
