--- a/pweb_ui/template-assets/templates/layout/pui-base.html
+++ b/pweb_ui/template-assets/templates/layout/pui-base.html
@@ -26,6 +26,6 @@
 <script>
     PWeb.messageBox.parseAndShowMessage({{- util.pweb_flashed_messages|safe }})
 </script>
-
+{% block pweb_ui_base_bottom %}{% endblock %}
 </body>
 </html>
