--- a/pweb_ui/template-assets/templates/operator/form.html
+++ b/pweb_ui/template-assets/templates/operator/form.html
@@ -7,7 +7,7 @@
     <div class="col-lg-10 mt-3">
         <div class="card br-card rounded-0 card-t-head mb-3">
             <div class="bg-holder d-none d-lg-block bg-left"></div>
-            <div class="card-body">
+            <div class="card-body top-nav-table-header">
                 <div class="d-md-flex justify-content-between d-sm-block align-items-center">
                     <div class="mb-0 heading-text">{{ name }}</div>
                 </div>
