--- a/pweb_ui/template-assets/assets/css/pui-admin-base.css
+++ b/pweb_ui/template-assets/assets/css/pui-admin-base.css
@@ -6,6 +6,16 @@ body {
     -webkit-tap-highlight-color: rgba(67, 89, 113, 0);
 }
 
+.top-nav-bg-left {
+    background-position: right !important;
+    transform: rotate(180deg);
+    left: 0;
+}
+
+.top-nav-table-header {
+    padding: 0.65rem 1.25rem;
+}
+
 /*------------------------------------------------------------------------------------------
 #  Header
 ------------------------------------------------------------------------------------------*/
