--- a/pweb_ui/template-assets/assets/css/pui-admin-base.css
+++ b/pweb_ui/template-assets/assets/css/pui-admin-base.css
@@ -16,6 +16,16 @@ body {
     padding: 0.65rem 1.25rem;
 }
 
+.cursor-pointer {
+    cursor: pointer;
+}
+
+.action-button {
+    padding: .1875rem .75rem;
+    font-size: 0.875rem;
+    border-radius: .2rem;
+}
+
 /*------------------------------------------------------------------------------------------
 #  Header
 ------------------------------------------------------------------------------------------*/
