--- a/pweb_ui/template-assets/templates/layout/pui-admin-layout.html
+++ b/pweb_ui/template-assets/templates/layout/pui-admin-layout.html
@@ -10,8 +10,8 @@
                 <!-- ============ Branding ============ -->
                 <div class="header-content">
                     <div class="logo">
-                        <a href="#" title="Bangla Fighter">
-                            <img src="{{ url_for('pweb-ui.static', filename='img/logo.png') }}" alt="logo">
+                        <a href="/">
+                            <img src="{{ LOGO_URL }}" alt="logo">
                         </a>
                     </div>
                 </div>
@@ -92,16 +92,20 @@
                                     </li>
                                 {% endfor %}
                             {% endif %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for("operator_controller.list") }}">
-                                    <div class="d-flex align-items-center">
+
+                            {% if enable_default_left_nav %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ url_for("operator_controller.list") }}">
+                                        <div class="d-flex align-items-center">
                                             <span class="nav-link-icon">
                                                <i class="fa-solid fa-boxes-stacked"></i>
                                             </span>
-                                        <span class="nav-link-text ps-1">Operator</span>
-                                    </div>
-                                </a>
-                            </li>
+                                            <span class="nav-link-text ps-1">Operator</span>
+                                        </div>
+                                    </a>
+                                </li>
+                            {% endif %}
+
                         </ul>
                     </div>
                 </div>
