--- a/pweb_ui/template-assets/templates/layout/pui-admin-layout.html
+++ b/pweb_ui/template-assets/templates/layout/pui-admin-layout.html
@@ -78,8 +78,8 @@
                 <div class="col-lg-2">
                     <div class="navbar-vertical-content">
                         <ul class="navbar-nav flex-column mb-2">
-                            {% if navigation %}
-                                {% for nav_item in navigation %}
+                            {% if auth.navigation %}
+                                {% for nav_item in auth.navigation %}
                                     <li class="nav-item">
                                         <a class="nav-link" href="{{ nav_item.url }}">
                                             <div class="d-flex align-items-center">
